<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remroc_mapf_solver</name>
  <version>1.0.0</version>
  <description>Package contains a c++ service server which calls a mapf-solver</description>
  <maintainer email="lukas.heuer@de.bosch.com">Lukas Heuer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>cmath</depend> -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>remroc_interfaces</depend>
  <depend>remroc_cbs_library</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
